# codex-orchestrator

./: .gitignore  CHANGELOG.md  Codex_Worker_Capsule_Approved_Architecture.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  TEST_RESULTS.txt  d8_d9_dependency_and_boundary_evidence.md  deterministic_allowlist_worker_boundary_behavioral_proof.json  deterministic_allowlist_worker_boundary_progress.md  final_validation_release_hardening_implementation_note.md  list_real_codex_smoke_runbooks_implementation_note.md  live_progress_and_integration_implementation_note.md  operator_run_bundle_schema_validation_implementation_note.md  p0004_checkpoint_cleanliness_architecture_implementation_note.md  p0004_integration_checkpoint_failure_artifact_index.json  p0004_integration_checkpoint_failure_evidence_raw_commands.md  p0004_integration_checkpoint_failure_evidence_report.md  pyproject.toml  real_codex_operator_runbook_implementation_note.md  real_codex_report_contract_failure_evidence_note.md  real_codex_tg001_routing_failure_evidence_note.md  real_codex_timeout_progress_model_implementation_note.md  repair_patchlet_report_contract_hardening_implementation_note.md  schema_validation_for_integration_artifacts_implementation_note.md  timeout_env_diagnosis_implementation_note.md  verified_no_change_wrapper_gate_and_tg_repair_routing_implementation_note.md
docs/: Codex_Live_Progress_and_Accepted_Change_Integration_Architecture.md  Codex_Live_Progress_and_Accepted_Change_Integration_Implementation_Plan_Approved.md  Codex_Orchestrator_Final_Validation_Release_Hardening_Plan.md  cli.md  (+31 more)
(+432 files in other folders)
